# rep_for_test_task

./: README.md  config.py  pyproject.toml  settings.toml
api/: http_methods.py
artifacts/: results.txt
page_object/: login_page.py
pages/: login_page.py
tests/: conftest.py  test_authorization.py  test_results.text
utils/: helpers.py  utils.py
