[tool.poetry]
name = "rep-for-test-task"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin"]
readme = "README.md"
packages = [{include = "rep_for_test_task"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
